fix another table overflow bug

--- a/one/one/static/css/first.css
+++ b/one/one/static/css/first.css
@@ -6,6 +6,8 @@
 .light {
     background-color: black;
     height: 100vh;
+    display: table;
+    width: 100%;
 }
 
 .light_logs {
@@ -65,6 +67,7 @@
     display:inline-block;
     clip-path: inset(0 1.3ch 0 0);
     animation: l 1s steps(6) infinite;
+    background-color: black;
   }
   
   @keyframes l {
@@ -149,7 +152,7 @@
     height: 100vh;
 }
 
-.light main {
+.dark main {
   text-align: center;
   background-color: white;
 }
@@ -195,6 +198,7 @@
     display:inline-block;
     clip-path: inset(0 1.3ch 0 0);
     animation: l 1s steps(6) infinite;
+    background-color: white;
   }
   
   @keyframes l {
